# zksync-upgrade-verify

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-release-os.yml  build-release.yml
src/: call_all.rs  constants.rs  debug_trace_transaction.rs  facet_names.rs  function_selector.rs  function_signature.rs  info.rs  init_upgrade.rs  l2_contracts_names.rs  main.rs  parse_diamond_cut.rs  parse_diamond_cut_data.rs  parse_history_call.rs  parse_history_trace.rs  parse_proposal_call.rs  parse_proposal_trace.rs  parse_storage_diff.rs  parse_upgrade_call.rs  parse_upgrade_call_new.rs  parse_upgrade_tx.rs  slots_names.rs  strings.rs  trace.rs  upgrade_abi.rs  upgrade_abi_new.rs  upgrade_call_data.rs  utils.rs
