[package]
name = "zksync-upgrade-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3.0", features = ["derive"] }
ethers = "2.0.14"
ethabi = "5.0.0"
lazy_static = "1.4.0"